--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-switch-ios-ms4m",
   "version": "1.0.1",
-  "private": true,
+  "description": "Este módulo hace un componente tipo switch para MS4M siguiendo los estilos de la empresa",
+  "main": "src/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
